--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="titulo">
     <div class="left">
         <img class="logoAP" src="./assets/imagenes/APLogo-20-20.png" alt="" width= "40px" height="20px">
-        <h1>#YoProgramo</h1>
+        <div class="yoProgramo"><h3>#YoProgramo</h3></div>
     </div>
     <div class="right">
         <a href="Login">Login</a>
