--- a/src/app/componentes/experiencias/experiencias.component.html
+++ b/src/app/componentes/experiencias/experiencias.component.html
@@ -1,15 +1,19 @@
 <article class="article">
-    <h2>Experiencia<div class="agregar-btn">
-        <a href="#" class="agregar-btn"><i class="fa-solid fa-plus"></i></a>
-    </div></h2>
-    <div class="edit-btn-right">
-        <a href="#" class="edit-btn-right"><i class="fa-solid fa-pencil"></i></a>
-    </div>
-    <p><span><b>2013-2022:</b></span> Propietaria de Peluquería Canina.</p>
-    <p>Tareas: Peluquera canina, organización de agenda, reposición de insumos, atención personalizada del cliente.</p>
-    <p><span><b>2009-2013:</b></span> Peluquera canina en Veterinaria Zoo.</p>
-    <p>Tareas: Peluquería canina y auxiliar del Veterinario y de quirófano.</p>
-    <p><span><b>2008-2009:</b></span> Peluquera canina en Veterinaria Dra De María.</p>
-    <p>Tareas: Peluquería canina y auxiliar de la Veterinaria.</p>
-    <p><span><b>2007-2008:</b></span> Peluquera canina en MacCottas</p>
-</article>
+    <h2>Experiencia
+        <div class="agregar-btn">
+            <a href="#" class="agregar-btn"><i class="fa-solid fa-plus"></i></a>
+        </div>
+    </h2>
+        <div class="edit-btn-right">
+            <a href="#" class="edit-btn-right"><i class="fa-solid fa-pencil"></i></a>
+        </div>
+        <ul class="lista-elementos">
+            <li  style="list-style-type: none" *ngFor="let experiencia of experienciasList">
+                <p><span><b>{{experiencia.lugar}}</b>: </span>{{experiencia.puesto}}</p>
+                <p>{{experiencia.tareas}}</p>
+                <p><b>Desde: </b>{{experiencia.inicio}}</p>
+                <p><b>Hasta: </b>{{experiencia.fin}}</p> 
+                <br>       
+            </li>
+        </ul>
+    </article>
