--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -6,12 +6,26 @@
     <div class="edit-btn-right">
         <a href="#" class="edit-btn-right"><i class="fa-solid fa-pencil"></i></a>
     </div>
-    <label for="file"><p>Comunicación Asertiva:</p></label>
-    <progress id="file" max="100" value="80">80% </progress>
-
-    <label for="file"><p>Iniciativa:</p></label>
-    <progress id="file" max="100" value="70"> 70% </progress>
-    
-    <label for="file"><p>Persistencia:</p></label>
-    <progress id="file" max="100" value="70"> 70% </progress>        
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-11"> 
+                <div class="progress">        
+                    <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Comunicación Asertiva</div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Iniciativa</div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Persistencia</div>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+      
 </article>
