--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -1,7 +1,7 @@
 <article class="article">
-    <img class="portada" [src]="miPortfolio.image_background_header" width="1327" height="250" alt="teclado">
+    <img class="portada" src="" width="1327" height="250" alt="teclado">
     <div class="foto-perfil">
-       <img [src]="miPortfolio.image_perfil" widht="200" height="200" alt=""> 
+       <img [src]="" widht="200" height="200" alt=""> 
     </div>
     <div class="change-pic">
         <a href="#" class="0.3"><i class="fa-solid fa-image-portrait fa-xl"></i></a>
@@ -14,10 +14,8 @@
     <br>
     <br>
     <br>
-    <h2>{{miPortfolio.nombre}}</h2>
+    <h2>{{persona.nombre}} {{persona.apellido}}</h2>
     <p>Estudiante de Programación Full Stack</p>
     
-    <p>{{miPortfolio.ubicacion}}</p>
-    <button type="button" class="btn btn-primary">Secondary</button>
-    <button type="button" class="btn btn-outline-info">Info</button>
+    
 </article> 
