--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,6 @@
-
+<router-outlet></router-outlet>
       
-<app-header></app-header>
-
-<section>
-    
-    <app-encabezado></app-encabezado>  
-    
-    <app-acerca-de></app-acerca-de>
-
-    <app-educacion></app-educacion>
-
-    <app-experiencias></app-experiencias>
-
-    <app-skills></app-skills>
-
-    <app-proyectos></app-proyectos>
-
-</section>
-
-<app-footer></app-footer>  
+ 
       
 
    
