--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -4,7 +4,8 @@
         <div class="yoProgramo"><h3>#YoProgramo</h3></div>
     </div>
     <div class="right">
-        <a href="Login">Login</a>
+        <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">Ingresar</button>
+        <button type="button" class="btn btn-outline-light" (click)="onLogout()" *ngIf="isLogged">Cerrar Sesión</button>
     </div>
            
     <div class="right">
