--- a/src/app/componentes/educacion/edit-educacion/edit-educacion.component.html
+++ b/src/app/componentes/educacion/edit-educacion/edit-educacion.component.html
@@ -22,7 +22,7 @@
                     <label for="fin">Finalización</label>
                     <input type="text" class="form-control" id="fin" name="fin" [(ngModel)]="education.fin" required>
                 </div>
-                <button class="fa-solid fa-plus">
+                <button class="Actualizar">
                     Actualizar
                 </button>
             </form>
