--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,18 +19,21 @@
                 
                 <div class="form-check d-flex justify-content-start mb-4">
                   <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                  <label class="form-check-label" for="form1Example3"> Recordar Contraseña</label>
+                  <label class="form-check-label" for="form1Example3">Recordar Contraseña</label>
                 </div>
     
-                <button class="btn btn-warning btn-lg btn-block" type="submit">Entrar</button>
+                <button class="btn btn-outline-light" type="submit">Entrar</button>
+                <br>
+                <br>
+                <div>
+                  <label class="signUp-label">¿No tienes una cuenta? <a href="SUP" class="SUP text">Registrate</a></label>
+                </div>
 
               </form>
   
   
             </div>
-            <div>
-              <label class="signUp-label">¿No tienes una cuenta? <a href="SUP" class="SUP text">Registrate</a></label>
-            </div>
+            
           </div>
         </div>
       </div>
