--- a/src/app/componentes/educacion/new-educacion/new-educacion.component.css
+++ b/src/app/componentes/educacion/new-educacion/new-educacion.component.css
@@ -13,5 +13,6 @@ button{
     border-radius: 5px;
     border: 1px solid #9A86A4;
     font-family: 'Poppins', sans-serif; 
-    margin: 10px;   
+    margin: 10px;
+    padding: 10px;   
 }
