--- a/src/app/componentes/experiencias/experiencias.component.html
+++ b/src/app/componentes/experiencias/experiencias.component.html
@@ -7,7 +7,7 @@
       routerLink="/nuevaexp"
       *ngIf="isLogged"
     >
-      Nueva Experiencia
+      Agregar
     </button>
   </div>
   <div class="col lg 1"></div>
@@ -24,7 +24,7 @@
               class="btn btn-light"
               routerLink="/editexp/{{ Experiencia.id }}"
             >
-              <i class="fa-solid fa-pencil"></i> Editar
+              <i class="fa-solid fa-pencil"></i>
             </button>
           </td>
           <td *ngIf="isLogged">
@@ -32,7 +32,7 @@
               class="btn btn-light"
               (click)="delete(Experiencia.id)"
             >
-            <i class="fa-solid fa-trash-can"></i> Borrar</button></td>
+            <i class="fa-solid fa-trash-can"></i></button></td>
         </tr>
       </tbody>
     </table>
