--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <h2>{{persona.nombre}} {{persona.apellido}}</h2>
-    <p>Estudiante de Programación Full Stack</p>
+    <p>{{persona.descripcion}}</p>
     
     
 </article> 
