--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,11 +1,5 @@
 <article class="article">
-    <h2>Hard & Soft Skills<div class="agregar-btn">
-        <a href="#" class="agregar-btn"><i class="fa-solid fa-plus"></i></a>
-    </div></h2>
-    
-    <div class="edit-btn-right">
-        <a href="#" class="edit-btn-right"><i class="fa-solid fa-pencil"></i></a>
-    </div>
+    <h2>Hard & Soft Skills</h2>    
     <br>
     <div class="container">
         <div class="row">
