--- a/src/app/componentes/experiencias/experiencias.component.html
+++ b/src/app/componentes/experiencias/experiencias.component.html
@@ -15,23 +15,20 @@
     <table class="table">
       <tbody>
         <tr *ngFor="let Experiencia of expe">
-          <td>
+          <div class="col-xs-6 col-lg-2"></div>
+          <div class="col-xs-6 col-lg-8">
             <h3>{{ Experiencia.nombreE }}:</h3>
-          </td>
-          <td><h4>{{ Experiencia.descripcionE }}</h4></td>
+            <h4>{{ Experiencia.descripcionE }}</h4></div>
           <td *ngIf="isLogged">
             <button
               class="btn btn-light"
-              routerLink="/editexp/{{ Experiencia.id }}"
-            >
+              routerLink="/editexp/{{ Experiencia.id }}">
               <i class="fa-solid fa-pencil"></i>
-            </button>
-          </td>
+            </button></td>
           <td *ngIf="isLogged">
             <button
               class="btn btn-light"
-              (click)="delete(Experiencia.id)"
-            >
+              (click)="delete(Experiencia.id)">
             <i class="fa-solid fa-trash-can"></i></button></td>
         </tr>
       </tbody>
