--- a/src/app/componentes/experiencias/experiencias.component.html
+++ b/src/app/componentes/experiencias/experiencias.component.html
@@ -18,7 +18,7 @@
           <div class="col-xs-6 col-lg-2"></div>
           <div class="col-xs-6 col-lg-8">
             <h3>{{ Experiencia.nombreE }}:</h3>
-            <h4>{{ Experiencia.descripcionE }}</h4></div>
+            <p>{{ Experiencia.descripcionE }}</p></div>
           <td *ngIf="isLogged">
             <button
               class="btn btn-light"
