--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-left">
-        <div class="download-cv"><h3>Download CV</h3></div>
+        <div class="email"><h5>Contacto: verdani8@gmail.com</h5></div>
     </div>
     
-    <div class="arriba"><a href="#titulo">Volver arriba</a></div>        
+    <div class="arriba"><a href="#header">Volver arriba</a></div>        
 </footer> 
