--- a/src/app/componentes/educacion/new-educacion/new-educacion.component.html
+++ b/src/app/componentes/educacion/new-educacion/new-educacion.component.html
@@ -3,6 +3,21 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
+                    <label for="img">Imagen de la Educación</label>
+                    <input ngModel type="text" id="img" name="img" [(ngModel)]="img" required>
+                </div>
+                <!--<div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text" id="img">Imagen de la Educación</span>
+                    </div>
+                    <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="img"
+                        aria-describedby="inputGroupFileAddon01">
+                      <label class="custom-file-label" for="inputGroupFile01">Elegir Imagen</label>
+                    </div>
+                </div>-->
+                
+                <div class="form-group">                    
                     <label for="titulo">Titulo de la educación</label>
                     <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="titulo" required>
                 </div>
