--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -1,12 +1,17 @@
 <article class="article">
-    <img class="portada" src="" width="1327" height="250" alt="teclado">
-    <div class="foto-perfil">
-       <img [src]="" widht="200" height="200" alt=""> 
-    </div>
-    <div class="change-pic">
-        <a href="#" class="0.3"><i class="fa-solid fa-image-portrait fa-xl"></i></a>
-    </div> 
-    <div class="edit-btn-right">
+    <img id="portada" class="img-fluid" src="./assets/imagenes/miPortada.jpeg" width="1327" height="250" alt="teclado">
+    <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            <img id="foto-perfil" class="img-fluid" src="./assets/imagenes/perfil2.jpg" width="200" height="200">
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            <h2>{{persona.nombre}} {{persona.apellido}}</h2>
+            <p>{{persona.descripcion}}</p>
+        </div>
+
+
+    </div>    
+    <!--<div class="edit-btn-right">
         <a href="#" class="edit-btn-right"><i class="fa-solid fa-pencil"></i></a>
     </div> 
     
@@ -15,7 +20,8 @@
     <br>
     <br>
     <h2>{{persona.nombre}} {{persona.apellido}}</h2>
-    <p>{{persona.descripcion}}</p>
+    <p>{{persona.descripcion}}</p>-->
+    
     
     
 </article> 
