--- a/src/app/componentes/header/header.component.css
+++ b/src/app/componentes/header/header.component.css
@@ -6,6 +6,45 @@ header{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+.left{
+    float: left;
+    display: flex;
+}
+.logoAP{
+    width: 110px;
+    height: 70px;  
+    float: left;
+}
+.yoProgramo {   
+       
+    color: whitesmoke;
+    position: absolute;
+    float: left;    
+    margin-top: 20px;
+    margin-left: 120px;
+    
+}
 button{
-    margin: -8px;
+    float: right; 
+    margin: 15px;
+}
+
+.social-btn{
+    position: relative;
+    color: #6496b8;
+    font-size: 2em;
+    float: right;
+    display: flex;  
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+
+.right a{
+    transition: color 0.4s ease;
+    color: #f7f1e9;
+    text-decoration: none;    
+}
+.right a:hover{
+    color: #9A86A4;
 }
