--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,19 +15,13 @@
                 <div class="form-outline mb-4">
                   <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" name="password" required />
                   <label class="form-label" for="password">Contraseña</label>
-                </div>  
-                
-                <div class="form-check d-flex justify-content-start mb-4">
-                  <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                  <label class="form-check-label" for="form1Example3">Recordar Contraseña</label>
                 </div>
-    
                 <button class="btn btn-outline-light" type="submit">Entrar</button>
                 <br>
                 <br>
-                <div>
+                <!--<div>
                   <label class="signUp-label">¿No tienes una cuenta? <a href="SUP" class="SUP text">Registrate</a></label>
-                </div>
+                </div>-->
 
               </form>
   
