--- a/src/app/componentes/educacion/new-educacion/new-educacion.component.html
+++ b/src/app/componentes/educacion/new-educacion/new-educacion.component.html
@@ -4,7 +4,7 @@
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
                     <label for="img">Imagen de la Educación</label>
-                    <input ngModel type="text" id="img" name="img" [(ngModel)]="img" required>
+                    <input type="text" class="form-control" id="img" name="img" [(ngModel)]="img" required>
                 </div>
                 <!--<div class="input-group">
                     <div class="input-group-prepend">
